j_function/parser/math_parsing_unit.output
Terminals unused in grammar

   T_NULL_PTR
   '%'
   NEGATION
   '.'
   T_DIMENSIONS


Grammar

    0 $accept: Input_Line $end

    1 Input_Line: Expression T_END
    2           | Declaration T_END
    3           | If_Statement T_END

    4 Statement: Expression ';'
    5          | If_Statement
    6          | Declaration ';'
    7          | T_TRANSFER Expression_Wild ';'
    8          | For_Statement

    9 Test_Expression: '?' '(' Expression ')'

   10 If_Statement: Test_Expression Statement_Block
   11             | Test_Expression Statement_Block '!' Statement_Block
   12             | Test_Expression Statement_Block '!' If_Statement
   13             | Test_Expression Expression '!' Expression ';'

   14 Statement_Block: '{' Statement_List '}'

   15 Statement_List: /* empty */
   16               | Statement_List Statement

   17 For_Statement: T_FOR '(' Statement Expression ';' Expression_Wild ')' Statement_Block

   18 Declaration_List: /* empty */
   19                 | Declaration
   20                 | Declaration_List ',' Declaration

   21 Declaration: Variable_Declaration
   22            | Routine_Definition

   23 Routine_Definition: Bracketed_Declaration_List T_IDENTIFIER Bracketed_Declaration_List T_RIGHT_ARROW Type Statement_Block

   24 Bracketed_Declaration_List: '[' Declaration_List ']'

   25 Variable_Declaration: Type T_IDENTIFIER
   26                     | Type T_IDENTIFIER T_RIGHT_ARROW Expression
   27                     | Type T_IDENTIFIER T_LEFT_ARROW Expression

   28 Type: T_DOUBLE
   29     | T_INT
   30     | T_BOOL
   31     | T_VOID
   32     | T_STRING

   33 Expression: Assignment_Expression
   34           | Call
   35           | Constant_Expression
   36           | LValue
   37           | Expression '+' Expression
   38           | Expression '-' Expression
   39           | Expression '*' Expression
   40           | Expression '/' Expression
   41           | T_INCREMENT LValue
   42           | T_DECREMENT LValue
   43           | Expression '>' Expression
   44           | Expression '<' Expression
   45           | Expression T_GREATER_EQUAL Expression
   46           | Expression T_LESS_EQUAL Expression
   47           | Expression T_AND Expression
   48           | Expression T_OR Expression
   49           | Expression T_EQUAL Expression
   50           | Expression T_NOT_EQUAL Expression
   51           | '(' Expression ')'
   52           | '-' Expression

   53 Expression_Wild: /* empty */
   54                | Expression

   55 Assignment_Expression: LValue T_LEFT_ARROW Expression

   56 LValue: Field_Access_Expression

   57 Field_Access_Expression: T_IDENTIFIER

   58 Call: T_IDENTIFIER '(' Expression_List_Wild ')'

   59 Expression_List_Wild: /* empty */
   60                     | Expression_List

   61 Expression_List: Expression_List_Helper

   62 Expression_List_Helper: Expression
   63                       | Expression_List_Helper ',' Expression

   64 Constant_Expression: T_INTEGER_CONSTANT
   65                    | T_DOUBLE_CONSTANT
   66                    | T_BOOL_CONSTANT
   67                    | T_STRING_CONSTANT


Terminals, with rules where they appear

$end (0) 0
'!' (33) 11 12 13
'%' (37)
'(' (40) 9 17 51 58
')' (41) 9 17 51 58
'*' (42) 39
'+' (43) 37
',' (44) 20 63
'-' (45) 38 52
'.' (46)
'/' (47) 40
';' (59) 4 6 7 13 17
'<' (60) 44
'>' (62) 43
'?' (63) 9
'[' (91) 24
']' (93) 24
'{' (123) 14
'}' (125) 14
error (256)
T_VOID (258) 31
T_BOOL (259) 30
T_INT (260) 29
T_DOUBLE (261) 28
T_STRING (262) 32
T_NULL_PTR (263)
T_TRANSFER (264) 7
T_LEFT_ARROW (265) 27 55
T_RIGHT_ARROW (266) 23 26
T_END (267) 1 2 3
T_FOR (268) 17
T_IDENTIFIER (269) 23 25 26 27 57 58
T_STRING_CONSTANT (270) 67
T_INTEGER_CONSTANT (271) 64
T_DOUBLE_CONSTANT (272) 65
T_BOOL_CONSTANT (273) 66
T_OR (274) 48
T_AND (275) 47
T_NOT_EQUAL (276) 50
T_EQUAL (277) 49
T_GREATER_EQUAL (278) 45
T_LESS_EQUAL (279) 46
T_DECREMENT (280) 42
T_INCREMENT (281) 41
NEGATION (282)
T_DIMENSIONS (283)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
Input_Line (48)
    on left: 1 2 3, on right: 0
Statement (49)
    on left: 4 5 6 7 8, on right: 16 17
Test_Expression (50)
    on left: 9, on right: 10 11 12 13
If_Statement (51)
    on left: 10 11 12 13, on right: 3 5 12
Statement_Block (52)
    on left: 14, on right: 10 11 12 17 23
Statement_List (53)
    on left: 15 16, on right: 14 16
For_Statement (54)
    on left: 17, on right: 8
Declaration_List (55)
    on left: 18 19 20, on right: 20 24
Declaration (56)
    on left: 21 22, on right: 2 6 19 20
Routine_Definition (57)
    on left: 23, on right: 22
Bracketed_Declaration_List (58)
    on left: 24, on right: 23
Variable_Declaration (59)
    on left: 25 26 27, on right: 21
Type (60)
    on left: 28 29 30 31 32, on right: 23 25 26 27
Expression (61)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
    51 52, on right: 1 4 9 13 17 26 27 37 38 39 40 43 44 45 46 47 48
    49 50 51 52 54 55 62 63
Expression_Wild (62)
    on left: 53 54, on right: 7 17
Assignment_Expression (63)
    on left: 55, on right: 33
LValue (64)
    on left: 56, on right: 36 41 42 55
Field_Access_Expression (65)
    on left: 57, on right: 56
Call (66)
    on left: 58, on right: 34
Expression_List_Wild (67)
    on left: 59 60, on right: 58
Expression_List (68)
    on left: 61, on right: 60
Expression_List_Helper (69)
    on left: 62 63, on right: 61 63
Constant_Expression (70)
    on left: 64 65 66 67, on right: 35


State 0

    0 $accept: . Input_Line $end

    T_VOID              shift, and go to state 1
    T_BOOL              shift, and go to state 2
    T_INT               shift, and go to state 3
    T_DOUBLE            shift, and go to state 4
    T_STRING            shift, and go to state 5
    T_IDENTIFIER        shift, and go to state 6
    T_STRING_CONSTANT   shift, and go to state 7
    T_INTEGER_CONSTANT  shift, and go to state 8
    T_DOUBLE_CONSTANT   shift, and go to state 9
    T_BOOL_CONSTANT     shift, and go to state 10
    '-'                 shift, and go to state 11
    T_DECREMENT         shift, and go to state 12
    T_INCREMENT         shift, and go to state 13
    '['                 shift, and go to state 14
    '?'                 shift, and go to state 15
    '('                 shift, and go to state 16

    Input_Line                  go to state 17
    Test_Expression             go to state 18
    If_Statement                go to state 19
    Declaration                 go to state 20
    Routine_Definition          go to state 21
    Bracketed_Declaration_List  go to state 22
    Variable_Declaration        go to state 23
    Type                        go to state 24
    Expression                  go to state 25
    Assignment_Expression       go to state 26
    LValue                      go to state 27
    Field_Access_Expression     go to state 28
    Call                        go to state 29
    Constant_Expression         go to state 30


State 1

   31 Type: T_VOID .

    $default  reduce using rule 31 (Type)


State 2

   30 Type: T_BOOL .

    $default  reduce using rule 30 (Type)


State 3

   29 Type: T_INT .

    $default  reduce using rule 29 (Type)


State 4

   28 Type: T_DOUBLE .

    $default  reduce using rule 28 (Type)


State 5

   32 Type: T_STRING .

    $default  reduce using rule 32 (Type)


State 6

   57 Field_Access_Expression: T_IDENTIFIER .
   58 Call: T_IDENTIFIER . '(' Expression_List_Wild ')'

    '('  shift, and go to state 31

    $default  reduce using rule 57 (Field_Access_Expression)


State 7

   67 Constant_Expression: T_STRING_CONSTANT .

    $default  reduce using rule 67 (Constant_Expression)


State 8

   64 Constant_Expression: T_INTEGER_CONSTANT .

    $default  reduce using rule 64 (Constant_Expression)


State 9

   65 Constant_Expression: T_DOUBLE_CONSTANT .

    $default  reduce using rule 65 (Constant_Expression)


State 10

   66 Constant_Expression: T_BOOL_CONSTANT .

    $default  reduce using rule 66 (Constant_Expression)


State 11

   52 Expression: '-' . Expression

    T_IDENTIFIER        shift, and go to state 6
    T_STRING_CONSTANT   shift, and go to state 7
    T_INTEGER_CONSTANT  shift, and go to state 8
    T_DOUBLE_CONSTANT   shift, and go to state 9
    T_BOOL_CONSTANT     shift, and go to state 10
    '-'                 shift, and go to state 11
    T_DECREMENT         shift, and go to state 12
    T_INCREMENT         shift, and go to state 13
    '('                 shift, and go to state 16

    Expression               go to state 32
    Assignment_Expression    go to state 26
    LValue                   go to state 27
    Field_Access_Expression  go to state 28
    Call                     go to state 29
    Constant_Expression      go to state 30


State 12

   42 Expression: T_DECREMENT . LValue

    T_IDENTIFIER  shift, and go to state 33

    LValue                   go to state 34
    Field_Access_Expression  go to state 28


State 13

   41 Expression: T_INCREMENT . LValue

    T_IDENTIFIER  shift, and go to state 33

    LValue                   go to state 35
    Field_Access_Expression  go to state 28


State 14

   24 Bracketed_Declaration_List: '[' . Declaration_List ']'

    T_VOID    shift, and go to state 1
    T_BOOL    shift, and go to state 2
    T_INT     shift, and go to state 3
    T_DOUBLE  shift, and go to state 4
    T_STRING  shift, and go to state 5
    '['       shift, and go to state 14

    $default  reduce using rule 18 (Declaration_List)

    Declaration_List            go to state 36
    Declaration                 go to state 37
    Routine_Definition          go to state 21
    Bracketed_Declaration_List  go to state 22
    Variable_Declaration        go to state 23
    Type                        go to state 24


State 15

    9 Test_Expression: '?' . '(' Expression ')'

    '('  shift, and go to state 38


State 16

   51 Expression: '(' . Expression ')'

    T_IDENTIFIER        shift, and go to state 6
    T_STRING_CONSTANT   shift, and go to state 7
    T_INTEGER_CONSTANT  shift, and go to state 8
    T_DOUBLE_CONSTANT   shift, and go to state 9
    T_BOOL_CONSTANT     shift, and go to state 10
    '-'                 shift, and go to state 11
    T_DECREMENT         shift, and go to state 12
    T_INCREMENT         shift, and go to state 13
    '('                 shift, and go to state 16

    Expression               go to state 39
    Assignment_Expression    go to state 26
    LValue                   go to state 27
    Field_Access_Expression  go to state 28
    Call                     go to state 29
    Constant_Expression      go to state 30


State 17

    0 $accept: Input_Line . $end

    $end  shift, and go to state 40


State 18

   10 If_Statement: Test_Expression . Statement_Block
   11             | Test_Expression . Statement_Block '!' Statement_Block
   12             | Test_Expression . Statement_Block '!' If_Statement
   13             | Test_Expression . Expression '!' Expression ';'

    T_IDENTIFIER        shift, and go to state 6
    T_STRING_CONSTANT   shift, and go to state 7
    T_INTEGER_CONSTANT  shift, and go to state 8
    T_DOUBLE_CONSTANT   shift, and go to state 9
    T_BOOL_CONSTANT     shift, and go to state 10
    '-'                 shift, and go to state 11
    T_DECREMENT         shift, and go to state 12
    T_INCREMENT         shift, and go to state 13
    '('                 shift, and go to state 16
    '{'                 shift, and go to state 41

    Statement_Block          go to state 42
    Expression               go to state 43
    Assignment_Expression    go to state 26
    LValue                   go to state 27
    Field_Access_Expression  go to state 28
    Call                     go to state 29
    Constant_Expression      go to state 30


State 19

    3 Input_Line: If_Statement . T_END

    T_END  shift, and go to state 44


State 20

    2 Input_Line: Declaration . T_END

    T_END  shift, and go to state 45


State 21

   22 Declaration: Routine_Definition .

    $default  reduce using rule 22 (Declaration)


State 22

   23 Routine_Definition: Bracketed_Declaration_List . T_IDENTIFIER Bracketed_Declaration_List T_RIGHT_ARROW Type Statement_Block

    T_IDENTIFIER  shift, and go to state 46


State 23

   21 Declaration: Variable_Declaration .

    $default  reduce using rule 21 (Declaration)


State 24

   25 Variable_Declaration: Type . T_IDENTIFIER
   26                     | Type . T_IDENTIFIER T_RIGHT_ARROW Expression
   27                     | Type . T_IDENTIFIER T_LEFT_ARROW Expression

    T_IDENTIFIER  shift, and go to state 47


State 25

    1 Input_Line: Expression . T_END
   37 Expression: Expression . '+' Expression
   38           | Expression . '-' Expression
   39           | Expression . '*' Expression
   40           | Expression . '/' Expression
   43           | Expression . '>' Expression
   44           | Expression . '<' Expression
   45           | Expression . T_GREATER_EQUAL Expression
   46           | Expression . T_LESS_EQUAL Expression
   47           | Expression . T_AND Expression
   48           | Expression . T_OR Expression
   49           | Expression . T_EQUAL Expression
   50           | Expression . T_NOT_EQUAL Expression

    T_END            shift, and go to state 48
    T_OR             shift, and go to state 49
    T_AND            shift, and go to state 50
    T_NOT_EQUAL      shift, and go to state 51
    T_EQUAL          shift, and go to state 52
    '>'              shift, and go to state 53
    '<'              shift, and go to state 54
    T_GREATER_EQUAL  shift, and go to state 55
    T_LESS_EQUAL     shift, and go to state 56
    '+'              shift, and go to state 57
    '-'              shift, and go to state 58
    '*'              shift, and go to state 59
    '/'              shift, and go to state 60


State 26

   33 Expression: Assignment_Expression .

    $default  reduce using rule 33 (Expression)


State 27

   36 Expression: LValue .
   55 Assignment_Expression: LValue . T_LEFT_ARROW Expression

    T_LEFT_ARROW  shift, and go to state 61

    $default  reduce using rule 36 (Expression)


State 28

   56 LValue: Field_Access_Expression .

    $default  reduce using rule 56 (LValue)


State 29

   34 Expression: Call .

    $default  reduce using rule 34 (Expression)


State 30

   35 Expression: Constant_Expression .

    $default  reduce using rule 35 (Expression)


State 31

   58 Call: T_IDENTIFIER '(' . Expression_List_Wild ')'

    T_IDENTIFIER        shift, and go to state 6
    T_STRING_CONSTANT   shift, and go to state 7
    T_INTEGER_CONSTANT  shift, and go to state 8
    T_DOUBLE_CONSTANT   shift, and go to state 9
    T_BOOL_CONSTANT     shift, and go to state 10
    '-'                 shift, and go to state 11
    T_DECREMENT         shift, and go to state 12
    T_INCREMENT         shift, and go to state 13
    '('                 shift, and go to state 16

    $default  reduce using rule 59 (Expression_List_Wild)

    Expression               go to state 62
    Assignment_Expression    go to state 26
    LValue                   go to state 27
    Field_Access_Expression  go to state 28
    Call                     go to state 29
    Expression_List_Wild     go to state 63
    Expression_List          go to state 64
    Expression_List_Helper   go to state 65
    Constant_Expression      go to state 30


State 32

   37 Expression: Expression . '+' Expression
   38           | Expression . '-' Expression
   39           | Expression . '*' Expression
   40           | Expression . '/' Expression
   43           | Expression . '>' Expression
   44           | Expression . '<' Expression
   45           | Expression . T_GREATER_EQUAL Expression
   46           | Expression . T_LESS_EQUAL Expression
   47           | Expression . T_AND Expression
   48           | Expression . T_OR Expression
   49           | Expression . T_EQUAL Expression
   50           | Expression . T_NOT_EQUAL Expression
   52           | '-' Expression .

    '*'  shift, and go to state 59
    '/'  shift, and go to state 60

    $default  reduce using rule 52 (Expression)


State 33

   57 Field_Access_Expression: T_IDENTIFIER .

    $default  reduce using rule 57 (Field_Access_Expression)


State 34

   42 Expression: T_DECREMENT LValue .

    $default  reduce using rule 42 (Expression)


State 35

   41 Expression: T_INCREMENT LValue .

    $default  reduce using rule 41 (Expression)


State 36

   20 Declaration_List: Declaration_List . ',' Declaration
   24 Bracketed_Declaration_List: '[' Declaration_List . ']'

    ']'  shift, and go to state 66
    ','  shift, and go to state 67


State 37

   19 Declaration_List: Declaration .

    $default  reduce using rule 19 (Declaration_List)


State 38

    9 Test_Expression: '?' '(' . Expression ')'

    T_IDENTIFIER        shift, and go to state 6
    T_STRING_CONSTANT   shift, and go to state 7
    T_INTEGER_CONSTANT  shift, and go to state 8
    T_DOUBLE_CONSTANT   shift, and go to state 9
    T_BOOL_CONSTANT     shift, and go to state 10
    '-'                 shift, and go to state 11
    T_DECREMENT         shift, and go to state 12
    T_INCREMENT         shift, and go to state 13
    '('                 shift, and go to state 16

    Expression               go to state 68
    Assignment_Expression    go to state 26
    LValue                   go to state 27
    Field_Access_Expression  go to state 28
    Call                     go to state 29
    Constant_Expression      go to state 30


State 39

   37 Expression: Expression . '+' Expression
   38           | Expression . '-' Expression
   39           | Expression . '*' Expression
   40           | Expression . '/' Expression
   43           | Expression . '>' Expression
   44           | Expression . '<' Expression
   45           | Expression . T_GREATER_EQUAL Expression
   46           | Expression . T_LESS_EQUAL Expression
   47           | Expression . T_AND Expression
   48           | Expression . T_OR Expression
   49           | Expression . T_EQUAL Expression
   50           | Expression . T_NOT_EQUAL Expression
   51           | '(' Expression . ')'

    T_OR             shift, and go to state 49
    T_AND            shift, and go to state 50
    T_NOT_EQUAL      shift, and go to state 51
    T_EQUAL          shift, and go to state 52
    '>'              shift, and go to state 53
    '<'              shift, and go to state 54
    T_GREATER_EQUAL  shift, and go to state 55
    T_LESS_EQUAL     shift, and go to state 56
    '+'              shift, and go to state 57
    '-'              shift, and go to state 58
    '*'              shift, and go to state 59
    '/'              shift, and go to state 60
    ')'              shift, and go to state 69


State 40

    0 $accept: Input_Line $end .

    $default  accept


State 41

   14 Statement_Block: '{' . Statement_List '}'

    $default  reduce using rule 15 (Statement_List)

    Statement_List  go to state 70


State 42

   10 If_Statement: Test_Expression Statement_Block .
   11             | Test_Expression Statement_Block . '!' Statement_Block
   12             | Test_Expression Statement_Block . '!' If_Statement

    '!'  shift, and go to state 71

    $default  reduce using rule 10 (If_Statement)


State 43

   13 If_Statement: Test_Expression Expression . '!' Expression ';'
   37 Expression: Expression . '+' Expression
   38           | Expression . '-' Expression
   39           | Expression . '*' Expression
   40           | Expression . '/' Expression
   43           | Expression . '>' Expression
   44           | Expression . '<' Expression
   45           | Expression . T_GREATER_EQUAL Expression
   46           | Expression . T_LESS_EQUAL Expression
   47           | Expression . T_AND Expression
   48           | Expression . T_OR Expression
   49           | Expression . T_EQUAL Expression
   50           | Expression . T_NOT_EQUAL Expression

    T_OR             shift, and go to state 49
    T_AND            shift, and go to state 50
    T_NOT_EQUAL      shift, and go to state 51
    T_EQUAL          shift, and go to state 52
    '>'              shift, and go to state 53
    '<'              shift, and go to state 54
    T_GREATER_EQUAL  shift, and go to state 55
    T_LESS_EQUAL     shift, and go to state 56
    '+'              shift, and go to state 57
    '-'              shift, and go to state 58
    '*'              shift, and go to state 59
    '/'              shift, and go to state 60
    '!'              shift, and go to state 72


State 44

    3 Input_Line: If_Statement T_END .

    $default  reduce using rule 3 (Input_Line)


State 45

    2 Input_Line: Declaration T_END .

    $default  reduce using rule 2 (Input_Line)


State 46

   23 Routine_Definition: Bracketed_Declaration_List T_IDENTIFIER . Bracketed_Declaration_List T_RIGHT_ARROW Type Statement_Block

    '['  shift, and go to state 14

    Bracketed_Declaration_List  go to state 73


State 47

   25 Variable_Declaration: Type T_IDENTIFIER .
   26                     | Type T_IDENTIFIER . T_RIGHT_ARROW Expression
   27                     | Type T_IDENTIFIER . T_LEFT_ARROW Expression

    T_LEFT_ARROW   shift, and go to state 74
    T_RIGHT_ARROW  shift, and go to state 75

    $default  reduce using rule 25 (Variable_Declaration)


State 48

    1 Input_Line: Expression T_END .

    $default  reduce using rule 1 (Input_Line)


State 49

   48 Expression: Expression T_OR . Expression

    T_IDENTIFIER        shift, and go to state 6
    T_STRING_CONSTANT   shift, and go to state 7
    T_INTEGER_CONSTANT  shift, and go to state 8
    T_DOUBLE_CONSTANT   shift, and go to state 9
    T_BOOL_CONSTANT     shift, and go to state 10
    '-'                 shift, and go to state 11
    T_DECREMENT         shift, and go to state 12
    T_INCREMENT         shift, and go to state 13
    '('                 shift, and go to state 16

    Expression               go to state 76
    Assignment_Expression    go to state 26
    LValue                   go to state 27
    Field_Access_Expression  go to state 28
    Call                     go to state 29
    Constant_Expression      go to state 30


State 50

   47 Expression: Expression T_AND . Expression

    T_IDENTIFIER        shift, and go to state 6
    T_STRING_CONSTANT   shift, and go to state 7
    T_INTEGER_CONSTANT  shift, and go to state 8
    T_DOUBLE_CONSTANT   shift, and go to state 9
    T_BOOL_CONSTANT     shift, and go to state 10
    '-'                 shift, and go to state 11
    T_DECREMENT         shift, and go to state 12
    T_INCREMENT         shift, and go to state 13
    '('                 shift, and go to state 16

    Expression               go to state 77
    Assignment_Expression    go to state 26
    LValue                   go to state 27
    Field_Access_Expression  go to state 28
    Call                     go to state 29
    Constant_Expression      go to state 30


State 51

   50 Expression: Expression T_NOT_EQUAL . Expression

    T_IDENTIFIER        shift, and go to state 6
    T_STRING_CONSTANT   shift, and go to state 7
    T_INTEGER_CONSTANT  shift, and go to state 8
    T_DOUBLE_CONSTANT   shift, and go to state 9
    T_BOOL_CONSTANT     shift, and go to state 10
    '-'                 shift, and go to state 11
    T_DECREMENT         shift, and go to state 12
    T_INCREMENT         shift, and go to state 13
    '('                 shift, and go to state 16

    Expression               go to state 78
    Assignment_Expression    go to state 26
    LValue                   go to state 27
    Field_Access_Expression  go to state 28
    Call                     go to state 29
    Constant_Expression      go to state 30


State 52

   49 Expression: Expression T_EQUAL . Expression

    T_IDENTIFIER        shift, and go to state 6
    T_STRING_CONSTANT   shift, and go to state 7
    T_INTEGER_CONSTANT  shift, and go to state 8
    T_DOUBLE_CONSTANT   shift, and go to state 9
    T_BOOL_CONSTANT     shift, and go to state 10
    '-'                 shift, and go to state 11
    T_DECREMENT         shift, and go to state 12
    T_INCREMENT         shift, and go to state 13
    '('                 shift, and go to state 16

    Expression               go to state 79
    Assignment_Expression    go to state 26
    LValue                   go to state 27
    Field_Access_Expression  go to state 28
    Call                     go to state 29
    Constant_Expression      go to state 30


State 53

   43 Expression: Expression '>' . Expression

    T_IDENTIFIER        shift, and go to state 6
    T_STRING_CONSTANT   shift, and go to state 7
    T_INTEGER_CONSTANT  shift, and go to state 8
    T_DOUBLE_CONSTANT   shift, and go to state 9
    T_BOOL_CONSTANT     shift, and go to state 10
    '-'                 shift, and go to state 11
    T_DECREMENT         shift, and go to state 12
    T_INCREMENT         shift, and go to state 13
    '('                 shift, and go to state 16

    Expression               go to state 80
    Assignment_Expression    go to state 26
    LValue                   go to state 27
    Field_Access_Expression  go to state 28
    Call                     go to state 29
    Constant_Expression      go to state 30


State 54

   44 Expression: Expression '<' . Expression

    T_IDENTIFIER        shift, and go to state 6
    T_STRING_CONSTANT   shift, and go to state 7
    T_INTEGER_CONSTANT  shift, and go to state 8
    T_DOUBLE_CONSTANT   shift, and go to state 9
    T_BOOL_CONSTANT     shift, and go to state 10
    '-'                 shift, and go to state 11
    T_DECREMENT         shift, and go to state 12
    T_INCREMENT         shift, and go to state 13
    '('                 shift, and go to state 16

    Expression               go to state 81
    Assignment_Expression    go to state 26
    LValue                   go to state 27
    Field_Access_Expression  go to state 28
    Call                     go to state 29
    Constant_Expression      go to state 30


State 55

   45 Expression: Expression T_GREATER_EQUAL . Expression

    T_IDENTIFIER        shift, and go to state 6
    T_STRING_CONSTANT   shift, and go to state 7
    T_INTEGER_CONSTANT  shift, and go to state 8
    T_DOUBLE_CONSTANT   shift, and go to state 9
    T_BOOL_CONSTANT     shift, and go to state 10
    '-'                 shift, and go to state 11
    T_DECREMENT         shift, and go to state 12
    T_INCREMENT         shift, and go to state 13
    '('                 shift, and go to state 16

    Expression               go to state 82
    Assignment_Expression    go to state 26
    LValue                   go to state 27
    Field_Access_Expression  go to state 28
    Call                     go to state 29
    Constant_Expression      go to state 30


State 56

   46 Expression: Expression T_LESS_EQUAL . Expression

    T_IDENTIFIER        shift, and go to state 6
    T_STRING_CONSTANT   shift, and go to state 7
    T_INTEGER_CONSTANT  shift, and go to state 8
    T_DOUBLE_CONSTANT   shift, and go to state 9
    T_BOOL_CONSTANT     shift, and go to state 10
    '-'                 shift, and go to state 11
    T_DECREMENT         shift, and go to state 12
    T_INCREMENT         shift, and go to state 13
    '('                 shift, and go to state 16

    Expression               go to state 83
    Assignment_Expression    go to state 26
    LValue                   go to state 27
    Field_Access_Expression  go to state 28
    Call                     go to state 29
    Constant_Expression      go to state 30


State 57

   37 Expression: Expression '+' . Expression

    T_IDENTIFIER        shift, and go to state 6
    T_STRING_CONSTANT   shift, and go to state 7
    T_INTEGER_CONSTANT  shift, and go to state 8
    T_DOUBLE_CONSTANT   shift, and go to state 9
    T_BOOL_CONSTANT     shift, and go to state 10
    '-'                 shift, and go to state 11
    T_DECREMENT         shift, and go to state 12
    T_INCREMENT         shift, and go to state 13
    '('                 shift, and go to state 16

    Expression               go to state 84
    Assignment_Expression    go to state 26
    LValue                   go to state 27
    Field_Access_Expression  go to state 28
    Call                     go to state 29
    Constant_Expression      go to state 30


State 58

   38 Expression: Expression '-' . Expression

    T_IDENTIFIER        shift, and go to state 6
    T_STRING_CONSTANT   shift, and go to state 7
    T_INTEGER_CONSTANT  shift, and go to state 8
    T_DOUBLE_CONSTANT   shift, and go to state 9
    T_BOOL_CONSTANT     shift, and go to state 10
    '-'                 shift, and go to state 11
    T_DECREMENT         shift, and go to state 12
    T_INCREMENT         shift, and go to state 13
    '('                 shift, and go to state 16

    Expression               go to state 85
    Assignment_Expression    go to state 26
    LValue                   go to state 27
    Field_Access_Expression  go to state 28
    Call                     go to state 29
    Constant_Expression      go to state 30


State 59

   39 Expression: Expression '*' . Expression

    T_IDENTIFIER        shift, and go to state 6
    T_STRING_CONSTANT   shift, and go to state 7
    T_INTEGER_CONSTANT  shift, and go to state 8
    T_DOUBLE_CONSTANT   shift, and go to state 9
    T_BOOL_CONSTANT     shift, and go to state 10
    '-'                 shift, and go to state 11
    T_DECREMENT         shift, and go to state 12
    T_INCREMENT         shift, and go to state 13
    '('                 shift, and go to state 16

    Expression               go to state 86
    Assignment_Expression    go to state 26
    LValue                   go to state 27
    Field_Access_Expression  go to state 28
    Call                     go to state 29
    Constant_Expression      go to state 30


State 60

   40 Expression: Expression '/' . Expression

    T_IDENTIFIER        shift, and go to state 6
    T_STRING_CONSTANT   shift, and go to state 7
    T_INTEGER_CONSTANT  shift, and go to state 8
    T_DOUBLE_CONSTANT   shift, and go to state 9
    T_BOOL_CONSTANT     shift, and go to state 10
    '-'                 shift, and go to state 11
    T_DECREMENT         shift, and go to state 12
    T_INCREMENT         shift, and go to state 13
    '('                 shift, and go to state 16

    Expression               go to state 87
    Assignment_Expression    go to state 26
    LValue                   go to state 27
    Field_Access_Expression  go to state 28
    Call                     go to state 29
    Constant_Expression      go to state 30


State 61

   55 Assignment_Expression: LValue T_LEFT_ARROW . Expression

    T_IDENTIFIER        shift, and go to state 6
    T_STRING_CONSTANT   shift, and go to state 7
    T_INTEGER_CONSTANT  shift, and go to state 8
    T_DOUBLE_CONSTANT   shift, and go to state 9
    T_BOOL_CONSTANT     shift, and go to state 10
    '-'                 shift, and go to state 11
    T_DECREMENT         shift, and go to state 12
    T_INCREMENT         shift, and go to state 13
    '('                 shift, and go to state 16

    Expression               go to state 88
    Assignment_Expression    go to state 26
    LValue                   go to state 27
    Field_Access_Expression  go to state 28
    Call                     go to state 29
    Constant_Expression      go to state 30


State 62

   37 Expression: Expression . '+' Expression
   38           | Expression . '-' Expression
   39           | Expression . '*' Expression
   40           | Expression . '/' Expression
   43           | Expression . '>' Expression
   44           | Expression . '<' Expression
   45           | Expression . T_GREATER_EQUAL Expression
   46           | Expression . T_LESS_EQUAL Expression
   47           | Expression . T_AND Expression
   48           | Expression . T_OR Expression
   49           | Expression . T_EQUAL Expression
   50           | Expression . T_NOT_EQUAL Expression
   62 Expression_List_Helper: Expression .

    T_OR             shift, and go to state 49
    T_AND            shift, and go to state 50
    T_NOT_EQUAL      shift, and go to state 51
    T_EQUAL          shift, and go to state 52
    '>'              shift, and go to state 53
    '<'              shift, and go to state 54
    T_GREATER_EQUAL  shift, and go to state 55
    T_LESS_EQUAL     shift, and go to state 56
    '+'              shift, and go to state 57
    '-'              shift, and go to state 58
    '*'              shift, and go to state 59
    '/'              shift, and go to state 60

    $default  reduce using rule 62 (Expression_List_Helper)


State 63

   58 Call: T_IDENTIFIER '(' Expression_List_Wild . ')'

    ')'  shift, and go to state 89


State 64

   60 Expression_List_Wild: Expression_List .

    $default  reduce using rule 60 (Expression_List_Wild)


State 65

   61 Expression_List: Expression_List_Helper .
   63 Expression_List_Helper: Expression_List_Helper . ',' Expression

    ','  shift, and go to state 90

    $default  reduce using rule 61 (Expression_List)


State 66

   24 Bracketed_Declaration_List: '[' Declaration_List ']' .

    $default  reduce using rule 24 (Bracketed_Declaration_List)


State 67

   20 Declaration_List: Declaration_List ',' . Declaration

    T_VOID    shift, and go to state 1
    T_BOOL    shift, and go to state 2
    T_INT     shift, and go to state 3
    T_DOUBLE  shift, and go to state 4
    T_STRING  shift, and go to state 5
    '['       shift, and go to state 14

    Declaration                 go to state 91
    Routine_Definition          go to state 21
    Bracketed_Declaration_List  go to state 22
    Variable_Declaration        go to state 23
    Type                        go to state 24


State 68

    9 Test_Expression: '?' '(' Expression . ')'
   37 Expression: Expression . '+' Expression
   38           | Expression . '-' Expression
   39           | Expression . '*' Expression
   40           | Expression . '/' Expression
   43           | Expression . '>' Expression
   44           | Expression . '<' Expression
   45           | Expression . T_GREATER_EQUAL Expression
   46           | Expression . T_LESS_EQUAL Expression
   47           | Expression . T_AND Expression
   48           | Expression . T_OR Expression
   49           | Expression . T_EQUAL Expression
   50           | Expression . T_NOT_EQUAL Expression

    T_OR             shift, and go to state 49
    T_AND            shift, and go to state 50
    T_NOT_EQUAL      shift, and go to state 51
    T_EQUAL          shift, and go to state 52
    '>'              shift, and go to state 53
    '<'              shift, and go to state 54
    T_GREATER_EQUAL  shift, and go to state 55
    T_LESS_EQUAL     shift, and go to state 56
    '+'              shift, and go to state 57
    '-'              shift, and go to state 58
    '*'              shift, and go to state 59
    '/'              shift, and go to state 60
    ')'              shift, and go to state 92


State 69

   51 Expression: '(' Expression ')' .

    $default  reduce using rule 51 (Expression)


State 70

   14 Statement_Block: '{' Statement_List . '}'
   16 Statement_List: Statement_List . Statement

    T_VOID              shift, and go to state 1
    T_BOOL              shift, and go to state 2
    T_INT               shift, and go to state 3
    T_DOUBLE            shift, and go to state 4
    T_STRING            shift, and go to state 5
    T_TRANSFER          shift, and go to state 93
    T_FOR               shift, and go to state 94
    T_IDENTIFIER        shift, and go to state 6
    T_STRING_CONSTANT   shift, and go to state 7
    T_INTEGER_CONSTANT  shift, and go to state 8
    T_DOUBLE_CONSTANT   shift, and go to state 9
    T_BOOL_CONSTANT     shift, and go to state 10
    '-'                 shift, and go to state 11
    T_DECREMENT         shift, and go to state 12
    T_INCREMENT         shift, and go to state 13
    '['                 shift, and go to state 14
    '?'                 shift, and go to state 15
    '('                 shift, and go to state 16
    '}'                 shift, and go to state 95
